--- a/baras/src/components/SlideMenu/SlideMenu.css
+++ b/baras/src/components/SlideMenu/SlideMenu.css
@@ -12,3 +12,15 @@
   top: 14%;
   left: 11.5%;
 }
+
+.menuList {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+.menuList > h4 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
