--- a/baras/src/components/SlideMenu/SlideMenu.css
+++ b/baras/src/components/SlideMenu/SlideMenu.css
@@ -22,5 +22,9 @@
 .menuList > h4 {
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+}
+
+.menuList > h4:hover {
+  color: rgb(160, 108, 11);
 }
