--- a/baras/src/components/UserProfile/UserProfile.css
+++ b/baras/src/components/UserProfile/UserProfile.css
@@ -1,5 +1,5 @@
-.profilePageMain {
-}
+/* .profilePageMain {
+} */
 
 .userDetailDiv {
   display: flex;
@@ -18,4 +18,10 @@
 }
 .userNameDiv {
   margin: auto;
+}
+
+.allBarasDiv {
+  width: 200px;
+  height: 150px;
+  border: 1px solid;
 }
