--- a/baras/src/components/SlideMenu/SlideMenu.css
+++ b/baras/src/components/SlideMenu/SlideMenu.css
@@ -3,14 +3,17 @@
   width: 15%;
   height: 70%;
   background-color: lightblue;
-  position: absolute;
-  top: 14%;
+  position: fixed;
+  top: 0%;
+  left: 15%;
+  /* overflow-x: hidden; */
+  transition: 2s;
 }
 
 .menuButton {
   position: absolute;
   top: 14%;
-  left: 11.5%;
+  left: 15%;
 }
 
 .menuList {
