--- a/baras/src/components/Story/Page.css
+++ b/baras/src/components/Story/Page.css
@@ -10,3 +10,17 @@
 /* textarea {
   background-color: purple;
 } */
+.fas {
+  color: rgba(218, 208, 208, 0.842);
+}
+.fas:hover {
+  color: rgba(104, 94, 94, 0.493);
+}
+
+/* .test {
+  background-color: rgb(189, 185, 185);
+  padding-right: 8px;
+  padding-left: 3px;
+  border: 3px solid rgba(216, 215, 215, 0.452);
+  border-radius: 20px;
+} */
