--- a/baras/src/components/Story/Page.css
+++ b/baras/src/components/Story/Page.css
@@ -18,7 +18,7 @@
 }
 
 .add {
-  font-size: 30px;
+  font-size: 29px;
   color: rgb(255, 255, 255);
   padding-left: 3px;
   padding-top: 2px;
@@ -30,12 +30,12 @@
 }
 .addButtonDiv {
   height: 35px;
-  width: 38px;
+  width: 35.5px;
   background-color: rgb(194, 194, 194);
   border: rgb(190, 190, 190) solid 2px;
   border-radius: 4px;
   position: absolute;
-  left: 72.4%;
+  left: 72.5%;
   top: 0.3%;
 }
 
@@ -50,3 +50,42 @@
   border: 3px solid rgba(216, 215, 215, 0.452);
   border-radius: 20px;
 }  */
+
+.allTheButtons {
+  width: 9.45%;
+  background-color: rgb(255, 194, 170);
+  display: flex;
+  flex-direction: column;
+  border-radius: 3px;
+  /* position: absolute;
+  top: -50%; */
+  transition: 0.7s;
+}
+
+.allTheButtons button {
+  margin: auto;
+  margin-bottom: 10px;
+  width: 100px;
+  background-color: transparent;
+  border: none;
+  font-size: 80%;
+  color: rgb(117, 117, 117);
+}
+.allTheButtons button:hover {
+  color: white;
+}
+.allTheButtons button:focus {
+  /* color: white; */
+  /* border: none; */
+  outline: none;
+  background-color: transparent;
+}
+#firstButton {
+  margin-top: 10px;
+}
+#firstButton:focus {
+  margin-top: 10px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
