--- a/baras/src/components/Story/Page.css
+++ b/baras/src/components/Story/Page.css
@@ -98,7 +98,8 @@
 
 #addPhotoInput::-webkit-file-upload-button {
   width: 55px;
-  border: rgb(255, 210, 192) 2px solid;
+  /* border: rgb(255, 210, 192) 2px solid; */
+  border: rgb(255, 183, 155) 2px solid;
   border-radius: 3px;
   padding-left: 2px;
   background-color: transparent;
@@ -110,6 +111,9 @@
   color: white;
 }
 
+#addPhotoInput {
+  color: rgb(148, 145, 141);
+}
 .clearButtons {
   background-color: transparent;
   border: none;
@@ -124,14 +128,20 @@
 
 .inputStyles {
   border: none;
-  border-bottom: 1px solid rgb(255, 194, 170);
+  border-bottom: 1px solid rgb(255, 182, 153);
   margin-left: 5px;
   color: rgb(148, 145, 141);
+  background-color: transparent;
 }
 .inputStyles:focus {
   outline: none;
 }
 
 .inputStyles::placeholder {
-  color: rgb(187, 125, 101);
+  color: rgb(255, 255, 255);
+}
+
+.inputDiv {
+  background-color: rgb(248, 207, 191);
+  border-radius: 3px;
 }
