--- a/baras/src/components/Trust/Trust.css
+++ b/baras/src/components/Trust/Trust.css
@@ -1,17 +1,26 @@
 .TrustMainDiv {
   display: flex;
-  width: 60%;
+  width: 35%;
   justify-content: center;
-  margin-bottom: 3%;
+  margin-bottom: 2%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 3px solid rgb(253, 235, 218);
+  border-radius: 6px;
+  padding-top: 0.6%;
+  padding-bottom: 0.6%;
+  padding-left: 0.6%;
+  padding-right: 0.6%;
 }
 
 .TrustDetails {
   margin-left: 2%;
+  margin-right: 2%;
 }
 
 .TrustButtons {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin-left: 3%;
+  margin-left: 12%;
 }
