--- a/baras/src/components/Story/StoryTell.css
+++ b/baras/src/components/Story/StoryTell.css
@@ -8,7 +8,7 @@
   border: none;
   border-bottom: 1px solid rgb(255, 211, 128);
   color: rgb(49, 49, 49);
-  width: 300px;
+  width: 18%;
   height: 30px;
   font-size: 20px;
   font-weight: bold;
@@ -23,4 +23,53 @@
   border-right: none;
   border-radius: 0;
   padding-left: 5px;
+}
+
+.storyTellForm button {
+  width: 10%;
+  height: 35px;
+  font-size: large;
+  color: rgba(255, 166, 0, 0.637);
+  margin: auto;
+  margin-top: 1%;
+}
+
+#storyTellFormPhoto {
+  padding-left: 5px;
+  margin: auto;
+  margin-top: 3%;
+  font-size: large;
+  text-decoration: underline;
+  text-decoration-color: rgb(182, 182, 182);
+  color: rgb(255, 173, 22);
+}
+
+#storyTellFormPhoto > input {
+  margin-left: 10px;
+}
+#storyTellFormPhoto > input::-webkit-file-upload-button {
+  width: 24.1%;
+  border: 2px solid orange;
+  border-radius: 10px;
+  background-color: rgba(255, 237, 204, 0.486);
+  color: rgba(0, 0, 0, 0.329);
+}
+#storyTellFormPhoto > input:focus {
+  outline: none;
+}
+
+#storyTellFormPhoto > input::-webkit-file-upload-button:focus {
+  outline: none;
+}
+#publishForm {
+  width: 9.5%;
+  margin-left: 40.58%;
+  margin-top: 1%;
+  color: rgb(255, 173, 22);
+  text-decoration: underline;
+  text-decoration-color: rgb(182, 182, 182);
+}
+
+#publishForm > input {
+  margin-left: 10px;
 }
