--- a/baras/src/components/EntryPage/EntryPage.css
+++ b/baras/src/components/EntryPage/EntryPage.css
@@ -2,6 +2,11 @@
   display: flex;
   justify-content: center;
   margin: 0;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(0, 0, 0);
 }
 .entryPageContent {
   margin: auto;
@@ -9,9 +14,9 @@
 }
 
 .entryPageContent > h1 {
-  margin-top: 40px;
+  margin-top: 30px;
   color: orange;
-  font-size: 650%;
+  font-size: 750%;
   margin-bottom: 25px;
 }
 
@@ -26,14 +31,22 @@
   width: 70px;
   border-radius: 3px;
   border: 1px solid transparent;
+  background-color: rgba(255, 255, 255, 0.205);
 }
 
+.buttonDiv > button:focus {
+  outline: none;
+}
 .entryPageQuote {
   display: flex;
   /* flex-direction: column; */
 }
+.entryPageQuote p {
+  font-size: 23px !important;
+  /* flex-direction: column; */
+}
 .entryPageQuote > p {
-  color: purple;
+  color: rgb(218, 199, 218);
   margin: auto;
   margin-bottom: 8px;
   font-size: large;
