ideo played positioned

--- a/baras/src/components/WorldBaras/WorldBaras.css
+++ b/baras/src/components/WorldBaras/WorldBaras.css
@@ -8,6 +8,7 @@
   margin-left: 2%;
   margin-bottom: 2%;
   width: 30.2%;
+  height: 339.09px;
   border: 1px solid orange;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 18px;
