--- a/baras/src/components/WorldBaras/OnlyPhoto.css
+++ b/baras/src/components/WorldBaras/OnlyPhoto.css
@@ -1,10 +1,12 @@
 .photoBarasDiv {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 8% 44% 8%;
   grid-template-areas:
     "relatesTo relatesTo"
     "photo texts"
     "createdAt user";
+  /* height: 40%; */
 }
 
 .relatesToPhotoDiv {
@@ -15,18 +17,25 @@
 .photoPhotoDiv {
   grid-area: photo;
   width: 99%;
-  height: 30%;
+  height: 25.5%;
+  border: 1px solid orange;
 }
+
 .photoPhotoDiv img {
   width: 100%;
-  height: 100%;
 }
 
 .textPhotoDiv {
   grid-area: texts;
   padding-left: 5%;
+  border: 1px solid orange;
+  height: 40%;
 }
 
+.textPhotoDiv p {
+  height: 90%;
+  overflow: auto;
+}
 .usernamePhotoDiv {
   grid-area: user;
   margin-left: auto;
