--- a/baras/src/components/WorldBaras/OnlyMusic.css
+++ b/baras/src/components/WorldBaras/OnlyMusic.css
@@ -1,42 +1,41 @@
-.videoBarasDiv {
+.musicBarasDiv {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 15% 78% 5%;
   grid-template-areas:
     "relatesTo relatesTo"
-    "video texts"
+    "music texts"
     "createdAt user";
   height: 100%;
-  /* background-color: rgba(255, 224, 167, 0.664); */
 }
 
-.videoBarasDiv:hover {
+.musicBarasDiv:hover {
   background-color: rgba(0, 0, 0, 0.856);
 }
-.relatesToVideoDiv {
+.relatesToMusicDiv {
   grid-area: relatesTo;
   margin-left: 2%;
   margin-right: 2%;
   border-bottom: 1px solid orange;
 }
 
-.videoVideoDiv {
-  grid-area: video;
+.musicMusicDiv {
+  grid-area: music;
   width: 99%;
   /* height: 25.5%; */
   margin-top: 8.5%;
   padding-left: 1%;
-  /* margin-top: 1%; */
+
   /* padding-left: 1%; */
   margin-bottom: auto;
   /* border: 1px solid orange; */
 }
 
-.videoVideoDiv iframe {
+.musicMusicDiv iframe {
   width: 100%;
 }
 
-.textVideoDiv {
+.textMusicDiv {
   grid-area: texts;
   padding-left: 4%;
   /* border: 1px solid orange; */
@@ -44,18 +43,18 @@
   padding-right: 2%;
 }
 
-.textVideoDiv p {
+.textMusicDiv p {
   height: 90%;
   overflow: hidden;
 }
-.usernameVideoDiv {
+.usernameMusicDiv {
   grid-area: user;
   margin-left: auto;
   margin-right: 3%;
   font-size: medium;
 }
 
-.createdAtVideoDiv {
+.createdAtMusicDiv {
   grid-area: createdAt;
   font-size: small;
   margin-bottom: 0;
@@ -63,6 +62,6 @@
   padding-left: 1%;
 }
 
-.usernameVideDiv:hover {
+.usernameMusicDiv:hover {
   color: orange;
 }
