Positioned Thoughts on modal

--- a/baras/src/components/Thoughts/Thoughts.css
+++ b/baras/src/components/Thoughts/Thoughts.css
@@ -1,5 +1,5 @@
 .thoughtsMainDiv {
-  width: 50%;
-  border: 1px solid;
-  height: 60%;
+  width: 40%;
+  border: 1px solid purple;
+  /* height: 40%; */
 }
