--- a/baras/src/components/Thoughts/OnlyPhotoThought.css
+++ b/baras/src/components/Thoughts/OnlyPhotoThought.css
@@ -2,30 +2,21 @@
 
 .mainThoughtDiv {
   width: 100%;
-  height: 40%;
+  /* height: 40%; */
   border: 1px solid;
 }
 
 .thoughtUserImage {
   width: 3%;
-  height: 5%;
-  background-color: orange;
+  height: 23px;
 }
 
 .thoughtUserImage img {
   width: 100%;
   height: 100%;
-  background-color: orange;
   border-radius: 100px;
+  border: 1px solid orange;
 }
-
-/* #Userimage {
-  background-color: orange;
-
-  width: 100%;
-  height: 100%;
-  border-radius: 10%;
-} */
 
 .thoughtImageDiv {
   width: 10%;
@@ -35,4 +26,25 @@
 .thoughtImageDiv img {
   width: 100%;
   height: 100%;
+}
+
+.wrapPhotoTextName {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.modalTextPhotoDiv {
+  width: 54%;
+  max-height: 357.266px;
+  border: 1px solid;
+  padding-left: 1.5%;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  overflow: auto;
+  overflow-x: hidden;
+}
+
+.modalUsernamePhotoDiv {
+  margin: auto;
+  margin-right: 1.9%;
+  font-size: large;
 }
