--- a/baras/src/components/Thoughts/OnlyPhotoThought.css
+++ b/baras/src/components/Thoughts/OnlyPhotoThought.css
@@ -2,13 +2,28 @@
 
 .mainThoughtDiv {
   width: 100%;
-  /* height: 40%; */
-  border: 1px solid;
+  /* height: 100%; */
+  /* height: 20%; */
+  /* max-height: 300px; */
+  /* border: 1px solid orange; */
+  padding-bottom: 10px;
 }
 
+.thoughtUsernameImageDiv {
+  display: flex;
+  /* margin-top: 1%; */
+  padding-top: 0.5%;
+  margin-bottom: 1%;
+}
 .thoughtUserImage {
-  width: 3%;
-  height: 23px;
+  padding-left: 0.5%;
+  padding-right: 1%;
+  width: 4%;
+  height: 28px;
+}
+
+.thoughtUsername {
+  align-self: center;
 }
 
 .thoughtUserImage img {
@@ -19,8 +34,10 @@
 }
 
 .thoughtImageDiv {
-  width: 10%;
-  height: 10%;
+  padding-left: 5%;
+  width: 30%;
+  height: 20%;
+  margin-bottom: 0%;
 }
 
 .thoughtImageDiv img {
@@ -28,23 +45,25 @@
   height: 100%;
 }
 
+.thoughtWithImageText {
+  width: 80%;
+  max-height: 100px;
+
+  padding-left: 5%;
+  overflow: auto;
+  overflow-x: hidden;
+  margin-top: 0%;
+}
+.thoughtWithImageText p {
+  width: 100%;
+  margin-top: 0.1%;
+  margin-bottom: 0.1%;
+}
 .wrapPhotoTextName {
   display: flex;
   flex-wrap: wrap;
 }
 
-.modalTextPhotoDiv {
-  width: 54%;
-  max-height: 357.266px;
-  border: 1px solid;
-  padding-left: 1.5%;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  overflow: auto;
-  overflow-x: hidden;
-}
-
-.modalUsernamePhotoDiv {
-  margin: auto;
-  margin-right: 1.9%;
-  font-size: large;
+.thoughtWithImageUpdatedAt {
+  margin-left: 80%;
 }
