--- a/baras/src/components/WorldBaras/ModalWorldBaras/OnlyPhotoModal.css
+++ b/baras/src/components/WorldBaras/ModalWorldBaras/OnlyPhotoModal.css
@@ -10,7 +10,7 @@
 
 .modalPhotoPhotoDiv {
   width: 40%;
-  /* height: 40%; */
+  /* height: 4%; */
 }
 
 .modalPhotoPhotoDiv img {
@@ -18,4 +18,30 @@
   min-width: auto;
   max-width: 100%;
   max-height: 100%;
+  height: 375px;
+}
+
+.modalTextPhotoDiv {
+  padding-right: 1%;
+}
+
+.modalTextPhotoDiv {
+  border-radius: 3px;
+  width: 52%;
+  margin-left: 1%;
+  max-height: 372px;
+  border: 1px solid;
+  padding-left: 1.5%;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  overflow: auto;
+  overflow-x: hidden;
+}
+
+/* .modalTextPhotoDiv p {
+  /* height: 20px; */
+
+.modalUsernamePhotoDiv {
+  margin: auto;
+  margin-right: 4.1%;
+  font-size: large;
 }
