--- a/baras/src/components/Thoughts/OnlyPhotoThought.css
+++ b/baras/src/components/Thoughts/OnlyPhotoThought.css
@@ -19,7 +19,7 @@
   padding-left: 0.5%;
   padding-right: 1%;
   width: 4%;
-  height: 28px;
+  height: 27px;
 }
 
 .thoughtUsername {
@@ -29,7 +29,7 @@
 .thoughtUserImage img {
   width: 100%;
   height: 100%;
-  border-radius: 100px;
+  border-radius: 100%;
   border: 1px solid orange;
 }
 
