--- a/baras/src/components/Thoughts/Thoughts.css
+++ b/baras/src/components/Thoughts/Thoughts.css
@@ -24,6 +24,7 @@
   resize: none;
   border: 1px solid rgb(255, 218, 149);
   border-top: none;
+  border-bottom-left-radius: 10px;
 }
 
 .thoughtsTextarea {
@@ -33,7 +34,6 @@
   width: 90%;
   height: 70px;
   /* resize: none; */
-  border: 1px solid orange;
 }
 
 .thoughtsTextarea button {
