--- a/baras/src/components/EntryPage/EntryPage.css
+++ b/baras/src/components/EntryPage/EntryPage.css
@@ -6,7 +6,7 @@
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.733);
 }
 .entryPageContent {
   margin: auto;
