--- a/baras/src/components/TrustBaras/TrustBaras.css
+++ b/baras/src/components/TrustBaras/TrustBaras.css
@@ -1,11 +1,29 @@
+.TrustBarasHeading {
+  width: 100%;
+  display: flex;
+  /* margin-left: auto;
+  margin-right: auto; */
+}
+
+.TrustBarasHeading h3 {
+  /* width: 50%; */
+  font-size: 180%;
+  text-decoration: underline;
+  color: orange;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .trustBarasMainDiv {
   width: 80%;
   margin: auto;
 }
 
 .musicTrustBarasDiv {
+  margin-bottom: 2%;
   width: 100%;
-  border: 1px solid;
+  border: 1px solid rgba(255, 166, 0, 0.623);
+  border-radius: 10px;
 }
 
 .relatesToTrustMusicDiv {
@@ -33,6 +51,10 @@
   overflow-x: hidden;
   padding-left: 2%;
   height: 400px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 3px;
+  border: 1px solid rgba(77, 76, 76, 0.164);
+  margin-left: 0.5%;
 }
 .musicTrustMusicDiv iframe {
   border: none;
@@ -47,12 +69,20 @@
 }
 
 .usernameTrustMusicDiv {
-  display: inline-block;
+  /* display: inline-block; */
+  align-self: flex-end;
+  margin-right: 1.4%;
+  margin-bottom: 0.8%;
 }
 
 .createdAtTrustMusicDiv {
-  display: inline-block;
+  /* display: inline-block; */
   padding-left: 0.5%;
-  margin-top: 1%;
-  margin-right: 79%;
+  margin-top: 1.2%;
+  /* margin-right: 79%; */
+}
+
+.createdAtUsername {
+  display: flex;
+  justify-content: space-between;
 }
