--- a/baras/src/components/WorldBaras/OnlyMusic.css
+++ b/baras/src/components/WorldBaras/OnlyMusic.css
@@ -9,9 +9,9 @@
   height: 100%;
 }
 
-.musicBarasDiv:hover {
+/* .musicBarasDiv:hover {
   background-color: rgba(0, 0, 0, 0.856);
-}
+} */
 .relatesToMusicDiv {
   grid-area: relatesTo;
   margin-left: 2%;
