--- a/baras/src/components/WorldBaras/OnlyPhoto.css
+++ b/baras/src/components/WorldBaras/OnlyPhoto.css
@@ -20,6 +20,7 @@
 .photoPhotoDiv {
   grid-area: photo;
   width: 99%;
+  height: 100%;
   margin-top: 8.5%;
   padding-left: 1%;
   margin-bottom: auto;
@@ -29,6 +30,7 @@
 
 .photoPhotoDiv img {
   width: 100%;
+  height: 55%;
 }
 
 .textPhotoDiv {
