--- a/baras/src/components/WorldBaras/ModalWorldBaras/OnlyVideoModal.css
+++ b/baras/src/components/WorldBaras/ModalWorldBaras/OnlyVideoModal.css
@@ -33,6 +33,7 @@
 
 .modalTextVideoDiv {
   display: inline-block;
+  word-break: break-all;
 
   padding-right: 1%;
 }
@@ -54,8 +55,12 @@
   font-size: large;
 }
 .modalUsernameVideoDiv {
-  margin-left: 89.4%;
-  margin-right: 4.1%;
+  /* display: flex; */
+  width: 8%;
+
+  margin-left: auto;
+  /* margin-left: 90%; */
+  margin-right: 1.1%;
   font-size: large;
 }
 
