--- a/baras/src/components/UserProfile/UserProfile.css
+++ b/baras/src/components/UserProfile/UserProfile.css
@@ -28,6 +28,8 @@
 .allBarasDiv {
   display: inline-block;
   width: 32%;
+  background-color: rgb(255, 227, 174);
+  border-radius: 10px;
   /* width: 200px;
   height: 150px; */
   border: 1px solid orange;
